# mcp-datajud

./: .gitignore  Dockerfile  README.md  k8s-govcloud-deployment.yaml  pdpj-integration.yaml  pyproject.toml  requirements.txt
.cursor/rules/: mcp-contract.mdc  mcp-endpoints.mdc  project-structure.mdc  python-style.mdc  testing-runbook.mdc
src/mcp_datajud/: __init__.py  cli.py  client.py  errors.py  generator.py  http_client.py  logging_config.py  parser.py  rate_limiter.py  server.py
src/mcp_datajud.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
