[project]
name = "mcp-datajud"
version = "0.1.0"
description = "Cliente MCP dinâmico para a API Pública do DataJUD (CNJ)"
authors = [
  { name = "Gabriel Ramos" }
]
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
keywords = ["datajud", "cnj", "mcp", "llm", "elasticsearch", "transparencia"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]

dependencies = [
  "requests>=2.32.0",
  "click>=8.1.7",
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/"
Issues = "https://github.com/"

[project.optional-dependencies]
async = ["httpx>=0.27.0"]

[project.scripts]
mcp-datajud = "mcp_datajud.cli:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["mcp_datajud*"]
